--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                 </div>
             </div>
         </section>
-        
+
         <!-- about me -->
         <section id="aboutMe" class="section section-lg pt-0">
             <div class="container">
@@ -244,13 +244,13 @@
                         <h2 class="h1 mb-4">about me, true story.</h2>
                         <p class="lead">self-taught. i started with programming in python, php, js. in parallel, i got
                             basic frontend skills.
-
-                            then i delved into the study of node.js and web work, got carried away with the "server"
+                            <br>
+                            ‣ then i delved into the study of node.js and web work, got carried away with the "server"
                             side of web development.
-
-                            then, as part of a hobby, i began to study mobile development for ios (swiftui)
+                            <br>
+                            ‣ then, as part of a hobby, i began to study mobile development for ios (swiftui)
                             architectural patterns of applications (mvvm, mvc).</p>
-                        <p class="lead">later, there was a need to automate ci/cd and build fault-tolerant systems for
+                        <p class="lead">‣ later, there was a need to automate ci/cd and build fault-tolerant systems for
                             deploying the company's web applications. i started studying devops and, later, became the
                             head of the development team.</p>
                     </div>
