--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>jr.devops engineer & swift, swiftui ios / javascript, node.js backend - developer — yury mid — pieceowater
     </title>
-    <!-- <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"> -->
+    <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
 
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="icon" type="image/svg+xml" href="./assets/favicon.svg">
