--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
                 var navBtn = this
                 var data = navBtn.dataset;
                 document.querySelector(data.target).classList.toggle('show')
-                document.querySelector('body').classList.toggle('overflow-hidden')
+                // document.querySelector('body').classList.toggle('overflow-hidden')
                 document.querySelector('#contactsDM').classList.toggle('show')
             })
         })
