--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>jr.devops engineer & swift, swiftui ios / javascript, node.js backend - developer — yury mid — pieceowater
-    </title>
+    <title>jr.devops engineer & swift, swiftui ios / javascript, node.js backend - developer — yury mid — pieceowater</title>
     <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
 
     <link rel="stylesheet" href="src/style.css">
@@ -139,7 +138,8 @@
                         </div>
                         <div class="card-body">
                             <h3 class="h5 mb-2">devops</h3><span class="h6 font-weight-normal text-gray mb-3"><a
-                                href="https://github.com/pieceowater" target="_blank" class="translatable">more →</a></span>
+                                href="https://github.com/pieceowater" target="_blank"
+                                class="translatable">more →</a></span>
                         </div>
                     </div>
                 </div>
@@ -157,7 +157,8 @@
                         </div>
                         <div class="card-body">
                             <h3 class="h5 mb-2">backend</h3><span class="h6 font-weight-normal text-gray mb-3"><a
-                                href="https://github.com/pieceowater" target="_blank" class="translatable">more →</a></span>
+                                href="https://github.com/pieceowater" target="_blank"
+                                class="translatable">more →</a></span>
                         </div>
                     </div>
                 </div>
@@ -175,7 +176,8 @@
                         </div>
                         <div class="card-body">
                             <h3 class="h5 mb-2">mobile</h3><span class="h6 font-weight-normal text-gray mb-3"><a
-                                href="https://github.com/pieceowater" target="_blank" class="translatable">more →</a></span>
+                                href="https://github.com/pieceowater" target="_blank"
+                                class="translatable">more →</a></span>
                         </div>
                     </div>
                 </div>
@@ -183,54 +185,62 @@
         </div>
         <div class="container">
             <div class="row justify-content-center mb-5">
-                <a href="#" class="btn btn-primary m-3">
+                <div href="#" class="btn btn-primary m-3">
                         <span class="mr-1">
                             <span class="fas fa-cog"></span>
                         </span>
-                    node.js</a>
+                    node.js
+                </div>
 
-                <a href="#" class="btn btn-primary m-3">
+                <div href="#" class="btn btn-primary m-3">
                         <span class="mr-1">
                             <span class="fas fa-cog"></span>
                         </span>
-                    docker</a>
+                    docker
+                </div>
 
-                <a href="#" class="btn btn-primary m-3">
+                <div href="#" class="btn btn-primary m-3">
                         <span class="mr-1">
                             <span class="fas fa-cog"></span>
                         </span>
-                    ci/cd</a>
+                    ci/cd
+                </div>
 
 
-                <a href="#" class="btn btn-primary m-3">
+                <div href="#" class="btn btn-primary m-3">
                         <span class="mr-1">
                             <span class="fas fa-cog"></span>
                         </span>
-                    linux</a>
+                    linux
+                </div>
 
-                <a href="#" class="btn btn-primary m-3">
+                <div href="#" class="btn btn-primary m-3">
                         <span class="mr-1">
                             <span class="fas fa-cog"></span>
                         </span>
-                    github actions</a>
+                    github actions
+                </div>
 
-                <a href="#" class="btn btn-primary m-3">
+                <div href="#" class="btn btn-primary m-3">
                         <span class="mr-1">
                             <span class="fas fa-cog"></span>
                         </span>
-                    yaml</a>
+                    yaml
+                </div>
 
-                <a href="#" class="btn btn-primary m-3">
+                <div href="#" class="btn btn-primary m-3">
                         <span class="mr-1">
                             <span class="fas fa-cog"></span>
                         </span>
-                    git</a>
+                    git
+                </div>
 
-                <a href="#" class="btn btn-primary m-3">
+                <div href="#" class="btn btn-primary m-3">
                         <span class="mr-1">
                             <span class="fas fa-cog"></span>
                         </span>
-                    bash</a>
+                    bash
+                </div>
             </div>
         </div>
     </section>
@@ -264,7 +274,9 @@
                         <h2 class="h2 mb-4"><i>«iceberg group»</i></h2>
                         <div class="progress-wrapper">
                             <div class="progress-info">
-                                <div class="progress-percentage"><span><span class="translatable">jun</span> 2021 → <span class="translatable">now</span></span></div>
+                                <div class="progress-percentage"><span><span
+                                        class="translatable">jun</span> 2021 → <span
+                                        class="translatable">now</span></span></div>
                             </div>
                             <div class="progress">
                                 <div class="progress-bar bg-dark" role="progressbar" aria-valuenow="60"
@@ -282,7 +294,8 @@
                                     class="text-gray translatable">almaty</small></div>
                         </div>
                         <div>
-                            <div class="mb-3"><span class="h6 translatable">implementation of devops methodology</span></div>
+                            <div class="mb-3"><span class="h6 translatable">implementation of devops methodology</span>
+                            </div>
                             <ul>
                                 <li class="translatable">project architecture design</li>
                                 <li class="translatable">building the internal infrastructure of the department and work processes, ci/cd</li>
@@ -298,6 +311,19 @@
             </div>
         </div>
     </section>
+
+    <div class="lang-alert" id="lang-alert">
+        <div class="alert alert-info alert-dismissible shadow-soft fade show" role="alert">
+            <div class="row">
+                <span class="alert-inner--text m-3"><strong>change language?</strong></span>
+            </div>
+            <div>
+                <button class="btn btn-primary m-2" onclick="document.querySelector('#lang').value = 2; toggleLang(); document.querySelector('#lang-alert').classList.remove('show')">change to russian</button>
+                <span onclick="document.querySelector('#lang-alert').classList.remove('show')" class="footer-links m-2" style="cursor: pointer">stay on english</span>
+            </div>
+        </div>
+    </div>
+
 </main>
 <footer id="footer" class="d-flex pb-5 pt-6 pt-md-7 border-top border-light bg-primary">
     <div class="container">
