--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>jr.devops engineer & swift, swiftui ios / javascript, node.js backend - developer — yury mid — pieceowater</title>
     <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
 
+
     <link rel="stylesheet" href="src/style.css">
     <link rel="stylesheet" href="src/custom.css">
     <link rel="icon" type="image/svg+xml" href="./assets/favicon.svg">
@@ -278,9 +279,9 @@
                                         class="translatable">now</span></span></div>
                             </div>
                             <div class="progress">
-                                <div class="progress-bar bg-dark" role="progressbar" aria-valuenow="60"
+                                <div class="progress-bar" role="progressbar" aria-valuenow="60"
                                      aria-valuemin="0" aria-valuemax="100"
-                                     style="width: 80%; animation: 3s ease 0s 1 normal none running animate-positive; opacity: 1;">
+                                     style="background-color: #078ff2 !important; width: 90%; animation: 15s ease 0s 1 normal none running animate-positive; opacity: 1;">
                                 </div>
                             </div>
                         </div>
@@ -358,18 +359,6 @@
                     </li>
                 </ul>
 
-                <div class="mt-3">
-                    <p><strong class="translatable">change theme</strong></p>
-                    <div id="checkbox" class="row align-items-center" style="gap: 10px">
-                        <span class="h6 m-0 translatable">light</span>
-                        <label class="switch">
-                            <input id="themeCheckbox" onchange="toggleTheme()" type="checkbox">
-                            <span class="slider"></span>
-                        </label>
-                        <span class="h6 m-0 translatable">dark</span>
-                    </div>
-                </div>
-
                 <div class="row mt-3 mb-3 align-items-center">
                     <p class="m-0"><strong class="translatable">language</strong></p>
                     <div class="select-container">
@@ -381,6 +370,23 @@
 
                 </div>
             </div>
+
+<!--            <div class="col-6 col-lg-2 mb-5 mb-lg-0">-->
+<!--                <div class="">-->
+<!--                    <p><strong class="translatable">change theme</strong></p>-->
+<!--                    <div id="checkbox" class="row align-items-center" style="gap: 10px">-->
+<!--                        <span class="h6 m-0 translatable">light</span>-->
+<!--                        <label class="switch">-->
+<!--                            <input id="themeCheckbox" onchange="toggleTheme()" type="checkbox">-->
+<!--                            <span class="slider"></span>-->
+<!--                        </label>-->
+<!--                        <span class="h6 m-0 translatable">dark</span>-->
+<!--                    </div>-->
+<!--                </div>-->
+
+
+<!--            </div>-->
+
             <div class="col-6 col-lg-2 mb-5 mb-lg-0">
                 <h5 class="translatable">map</h5>
                 <ul class="footer-links list-unstyled mt-2">
@@ -390,23 +396,6 @@
                             class="badge badge-gray ml-2">telegram</span></a>
                     </li>
                 </ul>
-            </div>
-            <div class="col-12 col-lg-4 mb-5 mb-lg-0">
-                <h5 class="translatable">mail me</h5>
-                <p class="text-gray font-small mt-2 translatable">i can't guarantee that I'll see. but if i see i'll contact you</p>
-                <form action="#">
-                    <div class="form-row mb-2">
-                        <div class="col-12"><label class="h6 font-weight-normal d-none" for="email">email
-                            address</label> <input type="email" class="form-control mb-2"
-                                                   placeholder="example@mail.com" name="email" id="email" required=""
-                                                   value=""></div>
-                        <div class="col-12">
-                            <button type="submit" class="btn btn-primary btn-block"
-                                    data-loading-text="Sending"><span>send</span></button>
-                        </div>
-                    </div>
-                </form>
-                <p class="text-gray font-small m-0 translatable">i’ll never share your details.</p>
             </div>
         </div>
         <hr class="my-5">
