--- a/index.html
+++ b/index.html
@@ -371,21 +371,21 @@
                 </div>
             </div>
 
-<!--            <div class="col-6 col-lg-2 mb-5 mb-lg-0">-->
-<!--                <div class="">-->
-<!--                    <p><strong class="translatable">change theme</strong></p>-->
-<!--                    <div id="checkbox" class="row align-items-center" style="gap: 10px">-->
-<!--                        <span class="h6 m-0 translatable">light</span>-->
-<!--                        <label class="switch">-->
-<!--                            <input id="themeCheckbox" onchange="toggleTheme()" type="checkbox">-->
-<!--                            <span class="slider"></span>-->
-<!--                        </label>-->
-<!--                        <span class="h6 m-0 translatable">dark</span>-->
-<!--                    </div>-->
-<!--                </div>-->
+            <div class="col-6 col-lg-2 mb-5 mb-lg-0" style="display: none">
+                <div class="">
+                    <p><strong class="translatable">change theme</strong></p>
+                    <div id="checkbox" class="row align-items-center" style="gap: 10px">
+                        <span class="h6 m-0 translatable">light</span>
+                        <label class="switch">
+                            <input id="themeCheckbox" onchange="toggleTheme()" type="checkbox">
+                            <span class="slider"></span>
+                        </label>
+                        <span class="h6 m-0 translatable">dark</span>
+                    </div>
+                </div>
 
 
-<!--            </div>-->
+            </div>
 
             <div class="col-6 col-lg-2 mb-5 mb-lg-0">
                 <h5 class="translatable">map</h5>
