--- a/index.html
+++ b/index.html
@@ -324,6 +324,8 @@
         </div>
     </div>
 
+    <div class="cursor"></div>
+
 </main>
 <footer id="footer" class="d-flex pb-5 pt-6 pt-md-7 border-top border-light bg-primary">
     <div class="container">
