--- a/index.html
+++ b/index.html
@@ -311,6 +311,16 @@
             </div>
         </div>
     </section>
+    <script>
+        fetch('./src/data.json')
+            .then(response => response.json())
+            .then(data => {
+                const value = data.someData.key;
+                console.log(value); // "value"
+            })
+            .catch(error => console.error(error))
+    </script>
+
 
     <div class="lang-alert" id="lang-alert">
         <div class="alert alert-info alert-dismissible shadow-soft fade show" role="alert">
