--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <i class="far fa-paper-plane mr-2"></i>
                     <span class="translatable" data-content="hireMe">###</span>
                 </a>
-                <a data-content="resumeBtnWrapper" href="./assets/resume.pdf" target="_blank" class="btn btn-primary">
+                <a data-content="resumeBtnWrapper" href="https://www.linkedin.com/in/pieceowater" target="_blank" class="btn btn-primary">
                     <i class="fas fa-book"></i><span data-content="resumeBtn">###</span></a>
                 <button id="navBtn" class="navbar-toggler ml-2" type="button" data-toggle="collapse" data-target="#navbar_global" aria-controls="navbar_global" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -149,6 +149,21 @@
                         </a>
                     </li>
                     <li class="mr-2">
+                        <a data-content="footerLinksLinkedin" href="" target="_blank" class="btn btn-icon-only btn-pill btn-primary" data-toggle="tooltip" data-placement="top" title="">
+                            <span aria-hidden="true" class="fab fa-linkedin"></span>
+                        </a>
+                    </li>
+                    <li class="mr-2">
+                        <a data-content="footerLinksTiktok" href="" target="_blank" class="btn btn-icon-only btn-pill btn-primary" data-toggle="tooltip" data-placement="top" title="">
+                            
+                            <span aria-hidden="true" class="fab ">
+                                <svg width="15" height="16" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                                    <path fill="#31344b" d="M448,209.91a210.06,210.06,0,0,1-122.77-39.25V349.38A162.55,162.55,0,1,1,185,188.31V278.2a74.62,74.62,0,1,0,52.23,71.18V0l88,0a121.18,121.18,0,0,0,1.86,22.17h0A122.18,122.18,0,0,0,381,102.39a121.43,121.43,0,0,0,67,20.14Z"/>
+                                </svg>
+                            </span>
+                        </a>
+                    </li>
+                    <li class="mr-2">
                         <a data-content="footerLinksTelegram" href="" target="_blank" class="btn btn-icon-only btn-pill btn-primary" data-toggle="tooltip" data-placement="top" title="">
                             <span aria-hidden="true" class="far fa-paper-plane"></span>
                         </a>
@@ -203,7 +218,7 @@
 <!--                            class="badge badge-gray ml-2">telegram</span></a>-->
 <!--                    </li>-->
                 </ul>
-            </div>
+            </div>  
         </div>
         <hr class="my-5">
         <div class="row">
