--- a/index.html
+++ b/index.html
@@ -93,12 +93,12 @@
     <!-- about me -->
     <section id="aboutMe" class="section section-lg pt-0">
         <div class="container">
-            <div class="row align-items-center justify-content-around">
-                <div class="col-md-5 col-xl-5 mb-5">
+            <div class="row align-items-start justify-content-around">
+                <div class="col-md-4 col-xl-4 mb-4">
                     <div class="card bg-primary shadow-soft border-light organic-radius p-3"><img
                             src="./assets/mid.jpg" class="organic-radius img-fluid"></div>
                 </div>
-                <div class="col-md-6 col-xl-5 text-center text-md-left" >
+                <div class="col-md-7 col-xl-7 text-center text-md-left" >
                     <h2 class="h1 mb-4 translatable" data-content="bodyAboutMeHeading">###</h2>
                     <div data-content="bodyAboutMeContent">
                     </div>
