--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
                     <h2 class="h1 mb-4 translatable" data-content="bodyAboutMeHeading">###</h2>
                     <div data-content="bodyAboutMeContent">
                     </div>
+                    <span id="showMoreBtn" style="display: none" class="nav-link-inner-text">read more...</span>
                 </div>
             </div>
         </div>
