--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
                     <i class="far fa-paper-plane mr-2"></i>
                     <span class="translatable" data-content="hireMe">###</span>
                 </a>
-                <a data-content="resumeBtnWrapper" href="https://www.linkedin.com/in/pieceowater" target="_blank" class="btn btn-primary">
+                <!-- <a data-content="resumeBtnWrapper" href="https://www.linkedin.com/in/pieceowater" target="_blank" class="btn btn-primary">
+                    <i class="fas fa-book"></i><span data-content="resumeBtn">###</span></a> -->
+                <a data-content="resumeBtnWrapper" href="./src/mid-devops-cv-curriculum-vitae.pdf" target="_blank" class="btn btn-primary">
                     <i class="fas fa-book"></i><span data-content="resumeBtn">###</span></a>
                 <button id="navBtn" class="navbar-toggler ml-2" type="button" data-toggle="collapse" data-target="#navbar_global" aria-controls="navbar_global" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
