--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-theme="light">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>jr.devops engineer & swift, swiftui ios / javascript, node.js backend - developer — yury mid — pieceowater</title>
+    <title>Backend / iOS / DevOps  - Engineer — Yury Mid (Litvinenko) — pieceowater</title>
     <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
 
 
